# flowtrace-debugger

./: .gitignore  ACTIVATION_GUIDE.md  BROWSER_AGENT_README.md  CONTRIBUTING.md  FLOWTRACE_TOOLS_ADDED.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.en.md  README.md  ROADMAP.md  TRUNCATION_SYSTEM.md  analyze-logs.sh  install-all.sh  install-flowtrace-cli.sh  install.sh  run-node-flowtrace.sh  test-exclusions.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: GO_AUTO_INSTRUMENTATION.md  RUST_AUTO_INSTRUMENTATION.md
agents/dotnet/: README.md
agents/dotnet/Flowtrace.Agent.SourceGenerator/: Flowtrace.Agent.SourceGenerator.csproj  FlowtraceSourceGenerator.cs
agents/dotnet/Flowtrace.Agent.Tests/: ConfigTests.cs  LoggerTests.cs  (+4 more)
agents/go/: README.md  go.mod  go.sum
agents/python/: README.md  pyproject.toml  requirements.txt  setup.py  test_private_methods.py
agents/python/examples/django-microservice/: README.md  app.py
agents/python/examples/fastapi-realtime/: README.md  app.py
agents/python/examples/flask-advanced/: README.md  app.py
agents/python/flowctl-py/: README.md  analyzer.py  instrumenter.py  main.py
agents/python/flowtrace_agent/: __init__.py  config.py  decorators.py  filters.py  logger.py  tracer.py
agents/python/flowtrace_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agents/python/flowtrace_agent/frameworks/: __init__.py  django.py  fastapi.py  flask.py
agents/python/tests/: test_config.py  test_decorator.py  test_filters.py  test_flask_integration.py  test_logger.py  test_tracer.py
agents/rust/: README.md
agents/rust/examples/actix-advanced/: Cargo.toml
agents/rust/examples/actix-advanced/src/: main.rs
agents/rust/examples/test-auto-trace/: Cargo.toml  README.md
agents/rust/examples/test-auto-trace/src/: main.rs
agents/rust/flowctl-rs/: Cargo.toml  README.md
agents/rust/flowctl-rs/src/: analyzer.rs  instrumenter.rs  main.rs
agents/rust/flowtrace-agent/: Cargo.toml  README.md
agents/rust/flowtrace-agent/src/: config.rs  lib.rs  logger.rs  span.rs
agents/rust/flowtrace-agent/src/middleware/: actix.rs  mod.rs
agents/rust/flowtrace-derive/: Cargo.toml
agents/rust/flowtrace-derive/src/: lib.rs
docs/en/: installation.md
docs/es/: installation.md
examples/: TestTruncation.java  browser-test.html  run-truncation-tests.sh  test-truncation-simple.js  test-truncation.js
examples/angular-test/: backend-api.js  run-backend-with-flowtrace.sh
examples/flowtrace-jsonsl/: flowtrace-1761862186484-ENTER.json  flowtrace-1761862186484-EXIT.json
examples/javascript-commonjs/: app.js  package.json
examples/javascript-esm/: app.mjs  package.json
examples/nextjs-typescript/: README.md
examples/react-typescript/: .gitignore  README.md  index.html  package-lock.json  package.json  test-server.js  test-server.ts  test-simple.js  tsconfig.json  tsconfig.node.json
examples/test-module-chain/: index.js  main.js  moduleA.js  moduleB.js  moduleC.js  userService.js
examples/typescript/: app.ts  package.json
flowtrace-agent/: build.sh  pom.xml
flowtrace-agent-js/: package.json
flowtrace-agent-js/src/: agent.js  browser-shim.js  decorators.js  esm-loader.mjs  logger.js  wrapper.js
flowtrace-agent-js/types/: config.d.ts  decorators.d.ts  index.d.ts  logger.d.ts
flowtrace-cli/: package-lock.json  package.json
flowtrace-cli/templates/: run-java-template.ps1  run-java-template.sh  run-node-template.ps1  run-node-template.sh
flowtrace-dashboard/: README.md  cli.js  mcp-tools.js  package-lock.json  package.json
flowtrace-dashboard/analyzer/: index.js
flowtrace-dashboard/public/: index.html
flowtrace-dashboard/server/: server.js
flowtrace-example/: pom.xml  run.sh
flowtrace-jsonsl/: flowtrace-1761859105787-ENTER.json  flowtrace-1761859105787-EXIT.json  flowtrace-1761859105788-ENTER.json  flowtrace-1761859105788-EXIT.json
mcp-server/: MCP_TOOLS.md  README.md  SETUP_COMPLETE.md  USAGE_EXAMPLES.md  cursor-mcp-config-example.json  cursor-rca-rules.md  package-lock.json  package.json  test-expansion.js  test-flowtrace-tools.js  tsconfig.json
mcp-server/src/: dashboard-tools.ts  flowtrace-tools.ts  server.ts  types.ts
scripts/: MULTI_IDE_SETUP.md  configure-mcp.sh  demo-configurator.sh  mcp-configurator.py  test-colors.sh  test-interactive.sh  test-mcp-configurator.sh
scripts/ide-configs/: README.md  claude-template.json  gemini-template.json
(+177 files in other folders)
