[package]
name = "flowctl-rs"
version = "1.0.0"
edition = "2021"
authors = ["Juan Pablo Diaz <rixmerz@github.com>"]
description = "CLI tool for FlowTrace Rust agent - analyze and instrument Rust code"
license = "MIT"

[[bin]]
name = "flowctl-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
