[package]
name = "flowtrace-agent"
version = "1.0.0"
edition = "2021"
authors = ["Juan Pablo Diaz <rixmerz@github.com>"]
description = "Function tracing agent for Rust applications"
license = "MIT"
repository = "https://github.com/Rixmerz/flowtrace-debugger"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
flowtrace-derive = { path = "../flowtrace-derive", version = "1.0" }

# Framework middleware (optional)
actix-web = { version = "4.0", optional = true }
futures-util = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
rocket = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
actix = ["actix-web", "futures-util"]
axum = ["dep:axum", "tower"]
rocket = ["dep:rocket"]
all-frameworks = ["actix", "axum", "rocket"]

[lib]
proc-macro = false
